[metadata]
name = plover-wtype-output
license = GNU General Public License v3 or later (GPLv3+)
keywords = plover plover_plugin

[options]
zip_safe = True
setup_requires =
  setuptools>=30.3.0
install_requires =
  plover>=4.0.0.dev10
packages = plover_wtype_output

[options.entry_points]
plover.extension =
  plover_wtype_output = plover_wtype_output:Main
plover.output =
  plover_wtype_output = plover_wtype_output:KeyboardEmulation
